--- a/network_property/network_property.ipynb
+++ b/network_property/network_property.ipynb
@@ -53,8 +53,7 @@
         "import random\n",
         "import numpy as np\n",
         "from itertools import permutations\n",
-        "import scipy.sparse.csgraph as csgraph\n",
-        "from scipy.sparse import csr_array"
+        "import scipy.sparse.csgraph as csgraph"
       ],
       "metadata": {
         "id": "nCcbEfDAZyy9"
@@ -74,7 +73,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"../data/ecoli_regDB5.txt\", sep='\\s+', header=None)\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/kztakemoto/network-analysis-in-biology/refs/heads/main/data/ecoli_regDB5.txt\", sep='\\s+', header=None)\n",
         "\n",
         "# グラフオブジェクトの作成\n",
         "g_dir = nx.from_pandas_edgelist(df,\n",
@@ -126,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ffrhwsxAZpRj",
-        "outputId": "60b31eb5-7594-428f-8c88-3c7004e5b8df"
+        "outputId": "54453871-0431-4c6d-d21a-68b05e9c8704"
       },
       "execution_count": 4,
       "outputs": [
@@ -165,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AnsIRr-5aGiO",
-        "outputId": "aaee9471-ed19-4ba1-d634-c486e5ba91fb"
+        "outputId": "721b9823-591d-4679-aabe-5a5a3b4a32bd"
       },
       "execution_count": 5,
       "outputs": [
@@ -197,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VIAo53P1atzQ",
-        "outputId": "06b64654-e0dd-41a3-89b8-ffc585c5d656"
+        "outputId": "04db5d70-c388-4ce7-971f-e9763867a422"
       },
       "execution_count": 6,
       "outputs": [
@@ -272,7 +271,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zgKEHAy0bokq",
-        "outputId": "176e9462-51fb-4177-e1f6-e6b24dc3c272"
+        "outputId": "f726f7bc-92e7-434f-e641-f5e815e418b6"
       },
       "execution_count": 9,
       "outputs": [
@@ -298,7 +297,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FoyWX8x3eNBb",
-        "outputId": "1d601aef-19d0-4aa3-a022-1867cc42a966"
+        "outputId": "e3e09729-20ff-4f9e-8391-8f0402019c45"
       },
       "execution_count": 10,
       "outputs": [
@@ -324,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_hnDWa5ePde",
-        "outputId": "2f756fdc-770b-46c2-ceb3-f3babfe55f92"
+        "outputId": "f06cff8a-ee2e-40e0-93b2-85bcf6ad9701"
       },
       "execution_count": 11,
       "outputs": [
@@ -361,7 +360,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AvetpPMNeWcu",
-        "outputId": "ecce5d55-014e-4f8e-efd2-aae127ed4e32"
+        "outputId": "b4cad590-8b6b-4d9e-bb33-6650f7f939a9"
       },
       "execution_count": 12,
       "outputs": [
@@ -396,7 +395,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fJrjcDymfFv5",
-        "outputId": "f4e68e51-07bd-4885-bf5a-f9e0de14a117"
+        "outputId": "bf84f6c6-e662-4f70-8ea1-48e2715386c1"
       },
       "execution_count": 13,
       "outputs": [
@@ -431,7 +430,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CRLjWqxkfVbK",
-        "outputId": "acb359f5-332d-4028-dd3e-3fba1939bc11"
+        "outputId": "dda2ff42-fb25-4269-e051-32809bc426ae"
       },
       "execution_count": 14,
       "outputs": [
@@ -466,7 +465,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8QkbQa99fnct",
-        "outputId": "339f41ac-d9a3-49d3-f9c2-c804b294978b"
+        "outputId": "5d348ce2-efbf-4727-a683-ddb6e7f2850a"
       },
       "execution_count": 15,
       "outputs": [
@@ -492,7 +491,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "51EbdvS3fq6s",
-        "outputId": "bf35f423-6970-4fb6-ac36-6781676a409e"
+        "outputId": "c89b2160-fadb-4ef2-a7f8-23545b3c8f81"
       },
       "execution_count": 16,
       "outputs": [
@@ -536,7 +535,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m2mZM9AWf2Oe",
-        "outputId": "4acbcf0d-8095-4997-a25e-b64d7bed40f8"
+        "outputId": "d11e2ed2-adc8-4eaf-9d8b-9cb89b62ff4c"
       },
       "execution_count": 17,
       "outputs": [
@@ -544,7 +543,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7.63194529911555"
+              "7.453379350015324"
             ]
           },
           "metadata": {},
@@ -573,7 +572,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nL_aB7gegAS4",
-        "outputId": "13dcf935-b8d2-4578-b0ad-c7fd9bd35b58"
+        "outputId": "52211d04-7ad2-40c2-e6f8-b9efe42770c1"
       },
       "execution_count": 18,
       "outputs": [
@@ -581,7 +580,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.840784989386257"
+              "3.729583568800503"
             ]
           },
           "metadata": {},
@@ -616,7 +615,7 @@
           "height": 472
         },
         "id": "11ZMMiIkgfQA",
-        "outputId": "d78ed279-ed11-4fed-94d1-7bd67c65e710"
+        "outputId": "ad28ebc1-d689-4969-8570-c36a322872a5"
       },
       "execution_count": 19,
       "outputs": [
@@ -669,7 +668,7 @@
           "height": 472
         },
         "id": "DNk-bhlYiJnN",
-        "outputId": "99acce87-db7e-45df-e3a5-b4f392107086"
+        "outputId": "be902e81-348a-4b23-fc3c-0b5702885728"
       },
       "execution_count": 20,
       "outputs": [
@@ -714,7 +713,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1wlajwsOi-wN",
-        "outputId": "6a3b82f5-3054-449c-ead5-d6a54bf12a20"
+        "outputId": "53aa9124-c1f8-484d-c039-0a6983bb086b"
       },
       "execution_count": 21,
       "outputs": [
@@ -751,7 +750,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QPrLkuo1jVL_",
-        "outputId": "540db47c-4daf-43d8-df69-cbeae5301641"
+        "outputId": "c0adb036-aed0-4a90-b1b2-783cc5d8c8b2"
       },
       "execution_count": 22,
       "outputs": [
@@ -793,7 +792,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CyRb8lXDjj8h",
-        "outputId": "c47e77be-c850-4b97-ca18-614bc97b94d6"
+        "outputId": "2de6308f-a048-4f03-c35b-9e5b5037b0f2"
       },
       "execution_count": 23,
       "outputs": [
@@ -850,7 +849,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ai7i-1uVkLiP",
-        "outputId": "382378dd-aa03-460b-b2f4-8ba3ed54252c"
+        "outputId": "f6bc0599-3b72-4bb1-d4bd-fb8d7a024c81"
       },
       "execution_count": 25,
       "outputs": [
@@ -885,7 +884,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mtn2isJxkPSy",
-        "outputId": "72c16ff7-e116-4747-f9a6-9355066d3454"
+        "outputId": "7e4f6199-f9f0-4087-d788-3edcdcddeeb8"
       },
       "execution_count": 26,
       "outputs": [
@@ -926,7 +925,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZldnz_AlE67",
-        "outputId": "156c06b4-50b9-41a2-9355-ec43ddac782d"
+        "outputId": "b6d83021-694f-4bf7-eadd-2be6e9d7d6af"
       },
       "execution_count": 27,
       "outputs": [
@@ -934,7 +933,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.008710921253009082"
+              "0.012995709750444862"
             ]
           },
           "metadata": {},
@@ -984,7 +983,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tbqb_HDleSJR",
-        "outputId": "111db51b-0ba8-4527-98d7-3c5633a8676f"
+        "outputId": "61d11c4a-84b3-4830-84a4-a01f2776939a"
       },
       "execution_count": 29,
       "outputs": [
@@ -1019,7 +1018,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zgnuet9gebFY",
-        "outputId": "d08ab45e-e953-401d-c33b-1c36cd5dba54"
+        "outputId": "ff146260-3bd6-4e07-8517-40d4de35b111"
       },
       "execution_count": 30,
       "outputs": [
@@ -1027,7 +1026,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2.89522839781"
+              "2.8360235036241077"
             ]
           },
           "metadata": {},
@@ -1079,7 +1078,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTRrgDmLa4KG",
-        "outputId": "671cdb44-2162-4b51-fb7f-712551bc730e"
+        "outputId": "7ab7da89-9eca-4baa-ebc3-42296b14eadd"
       },
       "execution_count": 32,
       "outputs": [
@@ -1087,7 +1086,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Shortest Path Length: 2.8952283978100652\n"
+            "Average Shortest Path Length: 2.8360235036239674\n"
           ]
         }
       ]
@@ -1112,7 +1111,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oY4D7SWCfPQx",
-        "outputId": "3adf3764-e2a8-4ca8-bf40-aae8cf4b6212"
+        "outputId": "7ca6d38a-a79c-453d-9fbf-84cc7384e3ac"
       },
       "execution_count": 33,
       "outputs": [
@@ -1156,7 +1155,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46ede548-c1e7-46ea-fa34-a4bd75beabdb"
+        "outputId": "b72fa829-e58e-4cfa-c6ac-ae5deb1be846"
       },
       "execution_count": 34,
       "outputs": [
@@ -1164,7 +1163,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Global Efficiency: 0.49966650532776524\n"
+            "Average Global Efficiency: 0.5410950099822603\n"
           ]
         }
       ]
@@ -1221,7 +1220,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f50c6810-bc74-4175-a21a-84be3a12496d"
+        "outputId": "cbdef7b0-bb9f-4119-94dd-637707a2c68a"
       },
       "execution_count": 35,
       "outputs": [
@@ -1229,7 +1228,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Local Efficiency: 1.2554018002340985\n"
+            "Average Local Efficiency: 1.3628030228823138\n"
           ]
         }
       ]
