--- a/centrality_analysis/centrality_analysis.ipynb
+++ b/centrality_analysis/centrality_analysis.ipynb
@@ -483,6 +483,27 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# やってみよう\n",
+        "* このNotebookを参考にして，酵母のデータを解析してみよう。\n",
+        "* Notebookを参考に自分のデータを解析してみよう。\n",
+        "\n",
+        "## 酵母のデータ\n",
+        "* 出芽酵母のタンパク質相互作用ネットワーク\n",
+        "  * `../data/yeast_ppi_Batada_etal_2006.txt`\n",
+        "  * エッジリスト形式\n",
+        "  * Batada NN et al. (2006) Stratus not altocumulus: a new view of the yeast protein interaction network. PLoS Biol 4, e317. doi: 10.1371/journal.pbio.0040317\n",
+        "* 出芽酵母タンパク質（遺伝子）の必須性\n",
+        "  * `../data/yeast_proteins_essentiality_OGEE.txt`\n",
+        "  * 必須（E），非必須（N）\n",
+        "  * Chen WH, Minguez P, Lercher MJ, Bork P (2012) OGEE: an online gene essentiality database. Nucleic Acids Res 40, D901-906. doi: 10.1093/nar/gkr986."
+      ],
+      "metadata": {
+        "id": "ZyUib_0OBe3D"
+      }
     }
   ]
 }
